# intellectual_video_systems

./: .gitignore  ИнтВС лаб 1.docx  ИнтВС лаб 2.docx  ИнтВС лаб 3.docx  ИнтВС лаб 4.docx  ИнтВС лаб 6.docx
lab1/: CMakeLists.txt  main.cpp
lab1/include/: aperture_correction_filter.h  gauss_filter.h  median_filter.h  mosaic_filter.h
lab1_5/: CMakeLists.txt  main.cpp
lab1_5/include/: base_outline.h  laplas_outline.h  sobel_outline.h
lab2/: CMakeLists.txt  main.cpp
lab2/include/: img_to_binary.h  morphological_operations.h
lab3/: CMakeLists.txt  main.cpp
lab3/include/: panorama.h
lab4/: CMakeLists.txt  main.cpp
lab4/include/: gradient_and_strobing.h
lab6/: CMakeLists.txt  main.cpp  векторные_расчеты.sai2
lab6/include/: clusterization.hpp
utils/: utils.h
